--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,13 +41,271 @@ header {
 /* End VideoPopup */
 /* Blog */
 .blog {
+  background-color: #f7f7f7;
+}
+
+.blog__image__container img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.blog__image__container a {
+  bottom: 10px;
+  left: 10px;
+  color: #ff6803;
+  transition: 0.3s;
+}
+
+.blog__image__container a:hover {
+  color: purple;
+  transition: 0.3s;
+}
+
+.avatar a {
+  color: black;
+}
+
+.avatar a img {
+  border-radius: 50%;
+}
+
+.blog__item__title {
+  height: 90px;
+  text-align: justify;
+}
+
+.blog__item__title h4 a {
+  color: black;
+}
+
+.read-more {
+  color: black;
+  transition: 0.3s;
+}
+
+.read-more:hover {
+  color: #ff6803;
+  transition: 0.3s;
 }
 /* End Blog */
 /* Testimonials */
-.testimonials {
+.blog__maintitle,
+.testimonials__maintitle {
+  color: #ff6803;
 }
 /* End testimonials */
 /* Footer */
 footer {
+  background-color: black;
+}
+
+.footer__item h4 {
+  color: white;
+}
+
+.footer__item h4 a {
+  color: white;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.footer__item h4 a:hover {
+  color: #ff6803;
+  transition: 0.3s;
+}
+
+.footer__item p {
+  color: #a29f9e;
+  text-align: justify;
+}
+
+.footer__item ul {
+  display: grid;
+  gap: 10px;
+}
+
+.footer__item ul li a {
+  color: #a29f9e;
+  transition: 0.3s;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.footer__item ul li a:hover {
+  color: #ff6803;
+  transition: 0.3s;
+}
+
+.footer__icon {
+  gap: 20px !important;
+}
+
+.footer__icon li {
+  background-color: white;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #ff6803;
+  font-size: 15px;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+
+.footer__icon li:hover {
+  background-color: #ff6803;
+  color: white;
+  transition: 0.3s;
 }
 /* End Footer */
+
+.subscribe__email input {
+  width: 100%;
+  padding: 15px;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  margin-bottom: 20px;
+  margin: auto;
+  outline: none;
+  transition: 0.3s;
+}
+
+.subscribe__email input:hover {
+  border: 1px solid #ff6803;
+  transition: 0.3s;
+}
+.subscribe__email input:focus {
+  border: 1px solid #ff6803;
+  transition: 0.3s;
+}
+
+.subscribe__email button {
+  background-color: #ff6803;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.cd-top--is-visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.cd-top--fade-out {
+  opacity: 0.3;
+}
+
+#movetop {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  z-index: 99;
+  cursor: pointer;
+  border: none;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: white;
+  background-color: #ff6600;
+}
+
+#movetop:focus {
+  outline: none;
+}
+
+.line {
+  width: 100%;
+  height: 1px;
+  background-color: rgb(43, 43, 43);
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.copyright {
+  color: white;
+}
+
+.copyright a {
+  color: #ff6803;
+  transition: 0.3s;
+}
+
+.copyright a:hover {
+  color: white;
+  transition: 0.3s;
+}
+
+/* start carousel */
+
+.carousel {
+  padding: 50px 0px;
+}
+
+.carousel__item {
+  text-align: center;
+  padding: 15px;
+}
+
+.carousel__item .item__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #ffffff;
+  color: #848482;
+  position: relative;
+}
+
+.carousel__item i {
+  font-size: 50px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.slick-dots li.slick-active button::before {
+  color: #ff6803;
+}
+
+.slick-dots li button::before {
+  font-size: 15px;
+  color: #d8d8d8;
+  opacity: 1;
+}
+.carousel__item:active {
+  cursor: grab;
+}
+
+.item__container img {
+  width: 80px;
+  height: 80px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.item__container i {
+  font-size: 25px;
+  color: #ff6803;
+}
+
+.quote {
+  color: black;
+  font-style: italic;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.customer-name {
+  font-size: 20px;
+  margin-bottom: 10px;
+  color: black;
+  font-weight: 700;
+}
