--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,109 @@ header {
 }
 /* End Status */
 /* VideoPopup */
-.popup {
+.popup__container .popup__image img {
+  border-radius: 10px;
 }
+
+.popup__container .popup__overlay {
+  top: 0;
+  left: 0;
+  background-color: black;
+  opacity: 0.5;
+  border-radius: 10px;
+}
+
+.play-dialog {
+  left: 0;
+  top: calc(50%);
+  transform: translateY(-50%);
+}
+
+#small-dialog {
+  max-width: 750px;
+  margin: 40px auto;
+}
+div#small-dialog iframe {
+  width: 100%;
+  height: 420px;
+  display: block;
+  border-radius: 10px;
+}
+.mfp-close-btn-in .mfp-close {
+  color: #fff;
+}
+.mfp-close,
+.mfp-close:active {
+  top: -40px;
+}
+
+/**
+     * Fade-zoom animation for first dialog
+     */
+/* start state */
+.my-mfp-zoom-in .zoom-anim-dialog {
+  opacity: 0;
+  transition: all 0.2s ease-in-out;
+  transform: scale(0.8);
+}
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready .zoom-anim-dialog {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing .zoom-anim-dialog {
+  transform: scale(0.8);
+  opacity: 0;
+}
+
+/* Dark overlay, start state */
+.my-mfp-zoom-in.mfp-bg {
+  opacity: 0;
+  transition: opacity 0.3s ease-out;
+}
+
+/* animate in */
+.my-mfp-zoom-in.mfp-ready.mfp-bg {
+  opacity: 0.95;
+}
+
+/* animate out */
+.my-mfp-zoom-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
+
+.video-play-icon:hover {
+  transform: scale(1.2);
+  transition: 0.3s ease-in-out;
+  background: #ff6803;
+  border: transparent;
+  color: #fff;
+}
+
+.play-view {
+  left: 0;
+  right: 0;
+  top: calc(50% - 40px);
+}
+
+.video-play-icon {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  font-size: 26px;
+  padding-left: 2px;
+  line-height: 76px;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+  -webkit-animation: ripple 1s linear infinite;
+  animation: ripple 1s linear infinite;
+  color: #ff6803;
+  background: #fff;
+}
+
 /* End VideoPopup */
 /* Blog */
 .blog {
@@ -71,7 +172,6 @@ header {
 
 .blog__item__title {
   height: 90px;
-  text-align: justify;
 }
 
 .blog__item__title h4 a {
@@ -92,6 +192,9 @@ header {
 .blog__maintitle,
 .testimonials__maintitle {
   color: #ff6803;
+}
+.dark .testimonials {
+  background-color: #232220;
 }
 /* End testimonials */
 /* Footer */
@@ -116,7 +219,6 @@ footer {
 
 .footer__item p {
   color: #a29f9e;
-  text-align: justify;
 }
 
 .footer__item ul {
@@ -146,11 +248,14 @@ footer {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  text-align: center;
   color: #ff6803;
   font-size: 15px;
   border-radius: 5px;
   transition: 0.3s;
+}
+
+.dark .footer__icon li {
+  background-color: #232220;
 }
 
 .footer__icon li:hover {
@@ -169,6 +274,10 @@ footer {
   margin: auto;
   outline: none;
   transition: 0.3s;
+}
+
+.dark .subscribe__email input {
+  background-color: #232220;
 }
 
 .subscribe__email input:hover {
@@ -193,17 +302,7 @@ ul {
   list-style-type: none;
 }
 
-.cd-top--is-visible {
-  visibility: visible;
-  opacity: 1;
-}
-
-.cd-top--fade-out {
-  opacity: 0.3;
-}
-
 #movetop {
-  position: fixed;
   bottom: 50px;
   right: 50px;
   z-index: 99;
@@ -247,22 +346,15 @@ a:hover {
 /* start carousel */
 
 .carousel {
-  padding: 50px 0px;
-}
-
-.carousel__item {
-  text-align: center;
-  padding: 15px;
+  margin-top: 50px;
 }
 
 .carousel__item .item__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
   color: #848482;
-  position: relative;
+}
+
+.dark .carousel__item .item__container {
+  background-color: #232220;
 }
 
 .carousel__item i {
@@ -308,4 +400,29 @@ a:hover {
   margin-bottom: 10px;
   color: black;
   font-weight: 700;
+}
+
+/*-- play icon animation --*/
+@-webkit-keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgb(255 255 255 / 25%),
+      0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px rgb(255 255 255 / 25%),
+      0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    box-shadow: 0 0 0 0 rgb(255 255 255 / 25%),
+      0 0 0 10px rgb(255 255 255 / 25%), 0 0 0 20px rgb(255 255 255 / 25%);
+  }
+
+  100% {
+    box-shadow: 0 0 0 10px rgb(255 255 255 / 25%),
+      0 0 0 20px rgb(255 255 255 / 25%), 0 0 0 40px rgba(50, 100, 245, 0);
+  }
 }
