--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,7 +115,7 @@ div#small-dialog iframe {
 .video-play-icon:hover {
   transform: scale(1.2);
   transition: 0.3s ease-in-out;
-  background: #ff6803;
+  background: #ff6600;
   border: transparent;
   color: #fff;
 }
@@ -136,7 +136,7 @@ div#small-dialog iframe {
   transition: 0.3s ease-in-out;
   -webkit-animation: ripple 1s linear infinite;
   animation: ripple 1s linear infinite;
-  color: #ff6803;
+  color: #ff6600;
   background: #fff;
 }
 
@@ -161,7 +161,7 @@ div#small-dialog iframe {
 .blog__image__container a {
   bottom: 10px;
   left: 10px;
-  color: #ff6803;
+  color: #ff6600;
   transition: 0.3s;
 }
 
@@ -204,14 +204,14 @@ div#small-dialog iframe {
 }
 
 .read-more:hover {
-  color: #ff6803;
+  color: #ff6600;
   transition: 0.3s;
 }
 /* End Blog */
 /* Testimonials */
 .blog__maintitle,
 .testimonials__maintitle {
-  color: #ff6803;
+  color: #ff6600;
 }
 
 .dark .testimonials {
@@ -240,7 +240,7 @@ footer {
 }
 
 .footer__item h4 a:hover {
-  color: #ff6803;
+  color: #ff6600;
   transition: 0.3s;
 }
 
@@ -260,7 +260,7 @@ footer {
 }
 
 .footer__item ul li a:hover {
-  color: #ff6803;
+  color: #ff6600;
   transition: 0.3s;
 }
 
@@ -274,7 +274,6 @@ footer {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  color: #ff6803;
   font-size: 15px;
   border-radius: 5px;
   transition: 0.3s;
@@ -285,7 +284,18 @@ footer {
 }
 
 .footer__icon li:hover {
-  background-color: #ff6803;
+  background-color: #ff6600;
+  transition: 0.3s;
+}
+
+.footer__icon li .footer__icon-link {
+  color: #ff6600;
+  transition: 0.3s;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.footer__icon li .footer__icon-link:hover {
   color: white;
   transition: 0.3s;
 }
@@ -305,16 +315,16 @@ footer {
 }
 
 .subscribe__email input:hover {
-  border: 1px solid #ff6803;
+  border: 1px solid #ff6600;
   transition: 0.3s;
 }
 .subscribe__email input:focus {
-  border: 1px solid #ff6803;
+  border: 1px solid #ff6600;
   transition: 0.3s;
 }
 
 .subscribe__email button {
-  background-color: #ff6803;
+  background-color: #ff6600;
   border: none;
   border-radius: 5px;
   font-size: 15px;
@@ -356,7 +366,7 @@ a:hover {
 }
 
 .copyright a {
-  color: #ff6803;
+  color: #ff6600;
   transition: 0.3s;
 }
 
@@ -386,7 +396,8 @@ a:hover {
 }
 
 .slick-dots li.slick-active button::before {
-  color: #ff6803;
+  color: #ff6600;
+  opacity: 1;
 }
 
 .slick-dots li button::before {
@@ -394,6 +405,11 @@ a:hover {
   color: #d8d8d8;
   opacity: 1;
 }
+
+.slick-dots li button:hover::before {
+  color: #ff6600;
+}
+
 .carousel__item:active {
   cursor: grab;
 }
@@ -407,7 +423,7 @@ a:hover {
 
 .item__container i {
   font-size: 25px;
-  color: #ff6803;
+  color: #ff6600;
 }
 
 .quote {
