--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,16 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Quicksand', sans-serif;
 }
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  text-align: left;
-  background-color: #fff;
-} */
+.container {
+  max-width: 1200px;
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
 /* Header */
 header {
 }
@@ -33,6 +30,7 @@ header {
 /* End Feature */
 /* Category */
 .category {
+  background: #f7f7f7;
 }
 .title-subhny {
   font-size: 20px;
@@ -47,19 +45,265 @@ header {
   font-size: 38px;
   line-height: 48px;
   font-weight: 600;
-  color: #232121;
+  font-family: 'Quicksand', sans-serif;
+}
+.justify-content-center {
+  justify-content: center !important;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.category .gal-slide-img {
+  position: relative;
+}
+.category .gal-slide-img img {
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  border-radius: 6px;
+}
+.category img:hover {
+  opacity: 0.85;
+  transition: all 0.4s;
+}
+.category .gal-slide-grid .gal-slide-img:after {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  content: " ";
+  position: absolute;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+  transition-duration: 300ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
+  border-radius: 6px;
+}
+.category .gal-slide-info {
+  left: auto;
+  bottom: 0;
+  width: 95%;
+  position: absolute;
+  color: #fff;
+  transform: translate3d(0, 10%, 0);
+}
+.category .gal-slide-grid .gal-slide-info {
+  opacity: 1;
+  transition: all 0.4s;
+}
+.category .content-left-sec a h4 {
+  font-size: 22px;
+  line-height: 30px;
+  color: #fff;
+  font-weight: 700;
+  font-family: 'Quicksand', sans-serif;
+}
+.category .content-left-sec h6 {
+  display: inline-block;
+  font-size: 18px;
+  line-height: 25px;
+  color: #fff;
+  opacity: 0.9;
+}
+.category .gal-slide-info span {
+  font-weight: 600;
+  color: #ffc600;
+  font-size: 18px;
+  letter-spacing: 1px;
+  font-family: 'Quicksand', sans-serif;
 }
 /* End Category */
 /* Service */
 .service {
+  position: relative;
+  color: #404040;
+  font-family: 'Quicksand', sans-serif;
+}
+.box-wrap {
+  padding: 40px 40px;
+  transition: all 0.5s ease 0s;
+  border-radius: 8px;
+  box-shadow: 0 25px 98px 0 rgba(0, 0, 0, 0.03);
+  background-color: #fff;
+  position: relative;
+  border: 1px solid #eee;
+}
+.box-wrap:hover {
+  box-shadow: 0 25px 98px 0 rgba(0, 0, 0, 0.1);
+}
+.box-wrap-grid {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 30px;
+}
+.box-wrap p {
+  margin: 0;
+  font-size: 18px;
+    line-height: 28px;
+    color: rgba(22, 28, 45, 0.7);
+}
+.icon {
+  width: 70px;
+  height: 70px;
+  text-align: center;
+  background: rgba(130, 115, 252, .05);
+  line-height: 70px;
+  border-radius: 6px;
+  transition: 0.3s ease-in-out;
+}
+.box-wrap:hover .icon {
+  background-color: #ff6600;
+  transition: 0.3s ease-in-out;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  text-rendering: auto;
+}
+.icon span.fa {
+  color: #ff6600;
+  font-size: 25px;
+  line-height: 70px;
+}
+.box-wrap:hover .icon span.fa {
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+.fa-group:before, .fa-users:before {
+  content: "";
+}
+.box-wrap h4 a {
+  font-size: 24px;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  display: block;
+  color: #232121;
+  transition: 0.5s;
+}
+.box-wrap h4 a:hover {
+  color: #ff6600;
 }
 /* End Service */
 /* Cover */
 .cover {
+    background: url(https://wp.w3layouts.com/diner/wp-content/themes/Diner/assets/images/banner2.jpg);
+    background-repeat: no-repeat,
+      no-repeat,
+      no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+.cover::before{
+  content: "";
+  background: rgb(16 15 19 / 66%);
+  position: absolute;
+  top: 0;
+  min-height: 100%;
+  left: 0;
+  right: 0;
+  z-index: -1;
+}
+.welcome-left {
+  max-width: 700px;
+  margin: 0 auto;
+}
+.welcome-left h3 {
+  font-size: 45px;
+  line-height: 55px;
+  font-weight: 600;
+  color: #fff;
+  max-width: 800px;
+}
+.btn-style, .btn-white {
+  padding: 12px 45px;
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 700;
+  transition: 0.3s ease-in;
+  border-radius: 6px;
+  border: 2px solid transparent;
+}
+.btn-white {
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+}
+.btn-white:hover {
+  background: #fff;
+  border: 2px solid #fff;
+  color: #ff6600;
+}
+.btn-primary {
+  color: #fff;
+  background-color: #ff6600;
+  border: 2px solid #ff6600;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #ff6600;
+  border: 2px solid #ff6600;
+  opacity: 0.8;
+}
+.fa-chevron-right:before {
+  content: "";
 }
 /* End Cover */
 /* Status */
 .status {
+  margin-top: -70px;
+    z-index: 10;
+    position: relative;
+    margin-bottom: 50px;
+}
+.counter {
+  background-color: #fff;
+  box-shadow: rgba(1, 1, 1, 0.05) 1px 1px 5px 0px;
+  padding: 40px 20px;
+  border-radius: 6px;
+  text-align: center;
+  transition: .3s ease;
+}
+.counter:hover {
+  transform: translateY(-0.25rem);
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px, rgba(71, 63, 79, 0.16) 0px 5px 10px;
+  transition: .3s ease;
+}
+.counter span.fa {
+  background: #ff6600;
+  font-size: 26px;
+  border-radius: 50%;
+  width: 68px;
+  height: 68px;
+  line-height: 68px;
+  color: #fff;
+  text-align: center;
+}
+.fa-building-o:before {
+  content: "";
+}
+.fa-smile-o:before {
+  content: "";
+}
+.timer {
+  font-size: 2.6em;
+  font-weight: 600;
+  color: #232121;
+}
+.status p {
+  font-size: 1.1em;
+  margin: 0;
+}
+p.count-text {
+  text-transform: capitalize;
+  color: rgba(22, 28, 45, 0.7);
+  font-weight: 600;
 }
 /* End Status */
 /* VideoPopup */
