--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .container {
   max-width: 1200px;
@@ -29,6 +29,30 @@ header {
 }
 /* End Feature */
 /* Category */
+#switchButton {
+  background-color: white;
+  border: 1px solid black;
+}
+#switchButton .fa-sun {
+  display: none;
+}
+#switchButton .fa-moon {
+  display: block;
+}
+
+/* Dark Theme*/
+.dark #switchButton {
+  background-color: black;
+  border: 1px solid white;
+}
+.dark #switchButton .fa-sun {
+  display: block;
+  color: white;
+}
+
+.dark #switchButton .fa-moon {
+  display: none;
+}
 .category {
   background: #f7f7f7;
 }
@@ -45,7 +69,7 @@ header {
   font-size: 38px;
   line-height: 48px;
   font-weight: 600;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .justify-content-center {
   justify-content: center !important;
@@ -77,7 +101,12 @@ header {
   height: 40%;
   content: " ";
   position: absolute;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.53) 69%, rgba(0, 0, 0, 0.76) 100%);
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0,
+    rgba(0, 0, 0, 0.53) 69%,
+    rgba(0, 0, 0, 0.76) 100%
+  );
   transition-duration: 300ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
@@ -100,7 +129,7 @@ header {
   line-height: 30px;
   color: #fff;
   font-weight: 700;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .category .content-left-sec h6 {
   display: inline-block;
@@ -114,14 +143,14 @@ header {
   color: #ffc600;
   font-size: 18px;
   letter-spacing: 1px;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 /* End Category */
 /* Service */
 .service {
   position: relative;
   color: #404040;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 .box-wrap {
   padding: 40px 40px;
@@ -143,14 +172,14 @@ header {
 .box-wrap p {
   margin: 0;
   font-size: 18px;
-    line-height: 28px;
-    color: rgba(22, 28, 45, 0.7);
+  line-height: 28px;
+  color: rgba(22, 28, 45, 0.7);
 }
 .icon {
   width: 70px;
   height: 70px;
   text-align: center;
-  background: rgba(130, 115, 252, .05);
+  background: rgba(130, 115, 252, 0.05);
   line-height: 70px;
   border-radius: 6px;
   transition: 0.3s ease-in-out;
@@ -173,7 +202,8 @@ header {
   color: #fff;
   transition: 0.3s ease-in-out;
 }
-.fa-group:before, .fa-users:before {
+.fa-group:before,
+.fa-users:before {
   content: "";
 }
 .box-wrap h4 a {
@@ -191,16 +221,14 @@ header {
 /* End Service */
 /* Cover */
 .cover {
-    background: url(https://wp.w3layouts.com/diner/wp-content/themes/Diner/assets/images/banner2.jpg);
-    background-repeat: no-repeat,
-      no-repeat,
-      no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: relative;
-    z-index: 1;
+  background: url(https://wp.w3layouts.com/diner/wp-content/themes/Diner/assets/images/banner2.jpg);
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: center;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
 }
-.cover::before{
+.cover::before {
   content: "";
   background: rgb(16 15 19 / 66%);
   position: absolute;
@@ -221,7 +249,8 @@ header {
   color: #fff;
   max-width: 800px;
 }
-.btn-style, .btn-white {
+.btn-style,
+.btn-white {
   padding: 12px 45px;
   font-size: 16px;
   line-height: 30px;
@@ -258,9 +287,8 @@ header {
 /* Status */
 .status {
   margin-top: -70px;
-    z-index: 10;
-    position: relative;
-    margin-bottom: 50px;
+  z-index: 10;
+  position: relative;
 }
 .counter {
   background-color: #fff;
@@ -268,12 +296,13 @@ header {
   padding: 40px 20px;
   border-radius: 6px;
   text-align: center;
-  transition: .3s ease;
+  transition: 0.3s ease;
 }
 .counter:hover {
   transform: translateY(-0.25rem);
-  box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px, rgba(71, 63, 79, 0.16) 0px 5px 10px;
-  transition: .3s ease;
+  box-shadow: rgba(46, 41, 51, 0.08) 0px 2px 4px,
+    rgba(71, 63, 79, 0.16) 0px 5px 10px;
+  transition: 0.3s ease;
 }
 .counter span.fa {
   background: #ff6600;
@@ -306,6 +335,49 @@ p.count-text {
   font-weight: 600;
 }
 /* End Status */
+
+/* Dark Theme: category, service, cover, status section */
+/* Dark category */
+.dark .category {
+  background: #282828;
+}
+.dark .title-w3l {
+  color: #eee;
+}
+/* Dark service */
+.dark .service {
+  background: #232220;
+}
+.dark .box-wrap {
+  background-color: #232220;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.dark .box-wrap-grid .info p {
+  color: #c2d0da;
+}
+.dark .box-wrap-grid .info h4 a {
+  color: #eee;
+  transition: 0.5s;
+}
+.dark .box-wrap-grid .info h4 a:hover {
+  color: #ff6600;
+}
+.dark .box-wrap p {
+  color: #c2d0da;
+}
+/* Dark status */
+.dark .status {
+  /* background-color: #232220; */
+}
+.dark .counter {
+  background-color: #232220;
+}
+.dark .timer {
+  color: #eee;
+}
+.dark p.count-text {
+  color: #c2d0da;
+}
 /* VideoPopup */
 .dark .popup {
   background-color: #232220;
