done dark/light theme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,9 @@ button.close {
   background-color: #333;
   color: white;
 }
+.dark .about {
+  background-color: #333;
+}
 /* BEST DARK */
 .dark .best_left {
   color: white;
